[package]
name = "serde_arrow"
version = "0.14.2"
authors = ["Christopher Prohm <mail@cprohm.de>"]
edition = "2021"
description  = "Convert sequences of Rust objects to Arrow arrays and back again"
readme = "../Readme.md"
repository = "https://github.com/chmp/serde_arrow"
license = "MIT"
rust-version = "1.83.0"

[lib]
bench = false

[package.metadata.docs.rs]
# arrow-version:replace: features = ["arrow-{version}"]
features = ["arrow-59"]

[features]
default = []

# arrow-version:insert: arrow-{version} = ["dep:arrow-array-{version}", "dep:arrow-schema-{version}", "marrow/arrow-{version}"]
arrow-59 = ["dep:arrow-array-59", "dep:arrow-schema-59", "marrow/arrow-59"]
arrow-58 = ["dep:arrow-array-58", "dep:arrow-schema-58", "marrow/arrow-58"]
arrow-57 = ["dep:arrow-array-57", "dep:arrow-schema-57", "marrow/arrow-57"]
arrow-56 = ["dep:arrow-array-56", "dep:arrow-schema-56", "marrow/arrow-56"]
arrow-55 = ["dep:arrow-array-55", "dep:arrow-schema-55", "marrow/arrow-55"]
arrow-54 = ["dep:arrow-array-54", "dep:arrow-schema-54", "marrow/arrow-54"]
arrow-53 = ["dep:arrow-array-53", "dep:arrow-schema-53", "marrow/arrow-53"]

[dependencies]
marrow = { path = "../marrow", version = "0.2.7", default-features = false, features = ["serde"] }

bytemuck = { version = "1", default-features = false }
# TODO: make optional, only required for str -> date conversions
chrono = { version = "0.4", features = ["std"], default-features = false }
half = { version = "2", features = ["bytemuck"], default-features = false }
serde = { version = "1.0", features = ["derive", "std"], default-features = false }

# arrow-version:insert: arrow-array-{version} = {{ package = "arrow-array", version = "{version}", optional = true, default-features = false }}
arrow-array-59 = { package = "arrow-array", version = "59", optional = true, default-features = false }
arrow-array-58 = { package = "arrow-array", version = "58", optional = true, default-features = false }
arrow-array-57 = { package = "arrow-array", version = "57", optional = true, default-features = false }
arrow-array-56 = { package = "arrow-array", version = "56", optional = true, default-features = false }
arrow-array-55 = { package = "arrow-array", version = "55", optional = true, default-features = false }
arrow-array-54 = { package = "arrow-array", version = "54", optional = true, default-features = false }
arrow-array-53 = { package = "arrow-array", version = "53", optional = true, default-features = false }

# arrow-version:insert: arrow-schema-{version} = {{ package = "arrow-schema", version = "{version}", optional = true, default-features = false }}
arrow-schema-59 = { package = "arrow-schema", version = "59", optional = true, default-features = false }
arrow-schema-58 = { package = "arrow-schema", version = "58", optional = true, default-features = false }
arrow-schema-57 = { package = "arrow-schema", version = "57", optional = true, default-features = false }
arrow-schema-56 = { package = "arrow-schema", version = "56", optional = true, default-features = false }
arrow-schema-55 = { package = "arrow-schema", version = "55", optional = true, default-features = false }
arrow-schema-54 = { package = "arrow-schema", version = "54", optional = true, default-features = false }
arrow-schema-53 = { package = "arrow-schema", version = "53", optional = true, default-features = false }

[dev-dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive", "std"], default-features = false }
serde_json = "1"
serde_bytes = "0.11"
bigdecimal = {version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
jiff = { version = "0.2", features = ["serde"] }

# arrow-version:insert: arrow-schema-{version} = {{ package = "arrow-schema", version = "{version}", default-features = false, features = ["serde"] }}
arrow-schema-59 = { package = "arrow-schema", version = "59", default-features = false, features = ["serde"] }
arrow-schema-58 = { package = "arrow-schema", version = "58", default-features = false, features = ["serde"] }
arrow-schema-57 = { package = "arrow-schema", version = "57", default-features = false, features = ["serde"] }
arrow-schema-56 = { package = "arrow-schema", version = "56", default-features = false, features = ["serde"] }
arrow-schema-55 = { package = "arrow-schema", version = "55", default-features = false, features = ["serde"] }
arrow-schema-54 = { package = "arrow-schema", version = "54", default-features = false, features = ["serde"] }
arrow-schema-53 = { package = "arrow-schema", version = "53", default-features = false, features = ["serde"] }

[dev-dependencies.rust_decimal]
version = "1.33"
features = [
    "serde-with-str",
    "serde-with-float",
    # NOTE activating this feature breaks JSON -> float processing
    # "serde-with-arbitrary-precision",
]

[lints]
workspace = true
